Added simple test and fixed some errors

--- a/app/src/main/res/layout/user_view_holder.xml
+++ b/app/src/main/res/layout/user_view_holder.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin"
             android:layout_marginRight="@dimen/margin"
-            android:id="@+id/card_user_id"
+            android:id="@+id/card_user_reputation"
             android:layout_gravity="center"
             android:textSize="13dp"
             android:textColor="#000"
